--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -12,6 +12,14 @@
         android:textSize="18sp"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@id/deleteButton"/>
+    <TextView
+        android:id="@+id/dateMaxTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fecha maxima"
+        android:layout_below="@id/nameTextView"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="8dp"/>
 
     <CheckBox
         android:id="@+id/doneCheckBox"
@@ -20,7 +28,7 @@
         android:text="Done"
         android:layout_below="@id/nameTextView"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="20dp"/>
 
     <ImageView
         android:id="@+id/deleteButton"
