--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="stat_intelligence">#f7a8a6</color>
+    <color name="stat_strength">#f7d4d6</color>
+    <color name="stat_speed">#e1b7c7</color>
+    <color name="stat_durability">#bfa1b6</color>
+    <color name="stat_power">#8e819c</color>
+    <color name="stat_combat">#A1AC38</color>
+    <color name="bahama">#005994</color>
+    <color name="cerulean">#00a7d1</color>
+    <color name="malibu">#66d9ff</color>
+
     <color name="blue">#2196F3</color>
 </resources>
