--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,6 +11,7 @@
         android:textSize="18sp"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@id/deleteButton"/>
+
     <TextView
         android:id="@+id/dateMaxTextView"
         android:layout_width="wrap_content"
@@ -32,11 +32,18 @@
 
     <ImageView
         android:id="@+id/deleteButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/delete"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="8dp"/>
+        android:src="@drawable/delete" />
+
+    <ImageView
+        android:id="@+id/editButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/deleteButton"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/edit" />
 
 </RelativeLayout>
