--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="bahama">#005994</color>
     <color name="cerulean">#00a7d1</color>
     <color name="malibu">#66d9ff</color>
+    <color name="success">#094E0B</color>
 
     <color name="blue">#2196F3</color>
 </resources>
