--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -13,7 +13,7 @@
     android:id="@+id/selectDateMaxButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/date_max"
+    android:text="@string/modify_date"
     android:layout_marginTop="20dp" />
 
 </LinearLayout>
