Add category button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="stat_speed">#e1b7c7</color>
     <color name="stat_durability">#bfa1b6</color>
     <color name="stat_power">#8e819c</color>
-    <color name="stat_combat">#A1AC38</color>
+    <color name="yellow">#FF9800</color>
     <color name="bahama">#005994</color>
     <color name="cerulean">#00a7d1</color>
     <color name="malibu">#66d9ff</color>
