--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -20,6 +20,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="5dp">
+
         <TextView
             android:id="@+id/dateMaxTextView"
             android:layout_width="wrap_content"
@@ -39,8 +40,6 @@
             android:visibility="gone"/>
 
     </LinearLayout>
-
-
 
     <CheckBox
         android:id="@+id/doneCheckBox"
@@ -63,7 +62,17 @@
         android:layout_height="40dp"
         android:layout_below="@id/deleteButton"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="36dp"
         android:src="@drawable/edit" />
 
+    <TextView
+        android:id="@+id/categoryTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/doneCheckBox"
+        android:layout_alignParentStart="true"
+        android:layout_weight="1"
+        android:text="@string/cate"
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_blue_dark" />
 </RelativeLayout>
